--- a/index.html
+++ b/index.html
@@ -1034,44 +1034,68 @@
     function playCollisionDissonance() { playTone(450, 0.15, 'sawtooth', 0.2, 0, { detune: 50 }); playTone(150, 0.2, 'square', 0.15, 0.02); }
     function applyLowBatteryMusicFilter(isLow) { if (!musicLowPassFilter || !audioInitialized || !audioCtx || audioCtx.state !== 'running') return; const targetFreq = isLow ? 800 : 20000; const targetQ = isLow ? 5 : 1; const now = audioCtx.currentTime; try { musicLowPassFilter.frequency.cancelScheduledValues(now); musicLowPassFilter.Q.cancelScheduledValues(now); musicLowPassFilter.frequency.linearRampToValueAtTime(targetFreq, now + 0.5); musicLowPassFilter.Q.linearRampToValueAtTime(targetQ, now + 0.5); } catch(e) { console.error("Error applying low battery filter:", e); } }
 
+    function makeDistortionCurve(amount) {
+        let k = typeof amount === 'number' ? amount : 50,
+            n_samples = 44100,
+            curve = new Float32Array(n_samples),
+            deg = Math.PI / 180,
+            i = 0,
+            x;
+        for ( ; i < n_samples; ++i ) {
+            x = i * 2 / n_samples - 1;
+            curve[i] = ( 3 + k ) * x * 20 * deg / ( Math.PI + k * Math.abs(x) );
+        }
+        return curve;
+    };
+
     function playExplosionSound() {
         if (!audioInitialized) return;
         const now = audioCtx.currentTime;
-        const vol = 0.5;
+        const vol = 0.6; // A bit louder
+        const duration = 0.8;
 
         // Low frequency thump
-        playTone(60, 0.1, 'sine', vol, now, { rampTo: 0.01 });
-        playTone(100, 0.2, 'triangle', vol * 0.6, now + 0.01, { rampTo: 0.01 });
+        playTone(50, 0.15, 'sine', vol, now, { rampTo: 0.01 });
+        playTone(80, 0.2, 'triangle', vol * 0.7, now + 0.02, { rampTo: 0.01 });
 
-        // Crackle
-        const noiseDur = 0.5;
-        const noiseEnv = audioCtx.createGain();
-        const noiseFilter = audioCtx.createBiquadFilter();
-        noiseFilter.type = 'bandpass';
-        noiseFilter.frequency.setValueAtTime(1200, now);
-        noiseFilter.Q.setValueAtTime(1, now);
-        noiseFilter.frequency.exponentialRampToValueAtTime(400, now + noiseDur * 0.7);
-
-        noiseEnv.gain.setValueAtTime(vol, now);
-        noiseEnv.gain.exponentialRampToValueAtTime(0.001, now + noiseDur);
-
+        // Main distorted blast
         const noiseSrc = audioCtx.createBufferSource();
-        const bufferSize = audioCtx.sampleRate * noiseDur;
+        const bufferSize = audioCtx.sampleRate * duration;
         const buffer = audioCtx.createBuffer(1, bufferSize, audioCtx.sampleRate);
         const data = buffer.getChannelData(0);
-        for (let i = 0; i < bufferSize; i++) data[i] = Math.random() * 2 - 1;
+        for (let i = 0; i < bufferSize; i++) {
+            data[i] = Math.random() * 2 - 1;
+        }
         noiseSrc.buffer = buffer;
-        noiseSrc.connect(noiseEnv).connect(noiseFilter).connect(audioCtx.destination);
 
-        // Reverb connection
+        const noiseEnv = audioCtx.createGain();
+        noiseEnv.gain.setValueAtTime(0, now);
+        noiseEnv.gain.linearRampToValueAtTime(vol, now + 0.01);
+        noiseEnv.gain.exponentialRampToValueAtTime(0.001, now + duration);
+
+        // Low-shelf filter for bass boost
+        const lowShelf = audioCtx.createBiquadFilter();
+        lowShelf.type = 'lowshelf';
+        lowShelf.frequency.value = 300;
+        lowShelf.gain.value = 8; // +8dB boost
+
+        // Distortion
+        const distortion = audioCtx.createWaveShaper();
+        distortion.curve = makeDistortionCurve(60);
+        distortion.oversample = '4x';
+
+        // Connect nodes: noise -> envelope -> bass boost -> distortion -> destination
+        noiseSrc.connect(noiseEnv).connect(lowShelf).connect(distortion).connect(audioCtx.destination);
+
+        // Also send the distorted sound to the reverb
         if (reverbNode) {
             const reverbGain = audioCtx.createGain();
-            reverbGain.gain.value = 0.3; // Amount of signal to send to reverb
-            noiseFilter.connect(reverbGain).connect(reverbNode.input);
+            reverbGain.gain.value = 0.4; // A bit more reverb
+            distortion.connect(reverbGain).connect(reverbNode.input);
         }
 
         noiseSrc.start(now);
-        noiseSrc.stop(now + noiseDur);
+        noiseSrc.stop(now + duration);
     }
     function playSurgeSound() { if (!audioInitialized) return; playTone(40, 2.0, 'sine', 0.2, 0, { rampTo: 0.01 }); }
 
@@ -1370,26 +1394,23 @@
     function spawnHotDawg() {
         const sizeW = 15;
         const sizeH = 40;
-        const dawg = {
+        hotDawgs.push({
             x: Math.random() * gameCanvas.width * 0.8,
             y: gameCanvas.height + sizeH,
             vx: (Math.random() - 0.5) * 2,
-            vy: - (8 + Math.random() * 3), // Increased height
+            vy: - (8 + Math.random() * 3),
             size: { w: sizeW, h: sizeH },
             scale: 0.5,
             maxScale: 1.2,
             scaleRate: 0.005,
             fusePhase: 0,
             gravity: 0.05,
-            wigglePhase: Math.random() * Math.PI * 2
-        };
-
-        if (playerControlEnabled && Math.random() < 0.3) {
-            const aimAdjust = (carX > dawg.x ? 0.4 : -0.4) * difficultyMultiplier;
-            dawg.vx += aimAdjust;
-        }
-        
-        hotDawgs.push(dawg);
+            wigglePhase: Math.random() * Math.PI * 2, // For horizontal wiggle
+            vWigglePhase: Math.random() * Math.PI * 2, // For vertical wiggle
+            vWiggleSpeed: 0.1 + Math.random() * 0.05,
+            lastAimTime: performance.now(),
+            aimInterval: 500 + Math.random() * 200
+        });
     }
 
     function updateHotDawgs() {
@@ -1397,17 +1418,31 @@
             const dawg = hotDawgs[i];
             dawg.x += dawg.vx;
             dawg.y += dawg.vy;
-            dawg.vy += dawg.gravity; // Arcing motion
+            dawg.vy += dawg.gravity;
             dawg.fusePhase += 0.5;
             
-            // Wiggle logic
+            // Horizontal Wiggle
             dawg.wigglePhase += 0.15;
             dawg.x += Math.sin(dawg.wigglePhase) * 1.5;
+
+            // Vertical Wiggle
+            dawg.vWigglePhase += dawg.vWiggleSpeed;
+            dawg.y += Math.sin(dawg.vWigglePhase) * 0.75;
+
+            // Periodic Targeting
+            const now = performance.now();
+            if (playerControlEnabled && now - dawg.lastAimTime > dawg.aimInterval) {
+                const aimAdjust = (carX - dawg.x > 0 ? 1 : -1) * 0.2 * difficultyMultiplier;
+                dawg.vx += aimAdjust;
+                dawg.vx = Math.max(-2.5, Math.min(2.5, dawg.vx)); // Cap speed
+                dawg.lastAimTime = now;
+                dawg.aimInterval = 500 + Math.random() * 200; // New interval
+            }
 
             if (dawg.scale < dawg.maxScale) {
                 dawg.scale += dawg.scaleRate;
             }
-            if (dawg.y < -dawg.size.h) { // Remove if it goes off top of screen
+            if (dawg.y < -dawg.size.h) {
                 hotDawgs.splice(i, 1);
             }
         }
@@ -1419,19 +1454,28 @@
             ctx.translate(dawg.x, dawg.y);
             ctx.scale(dawg.scale, dawg.scale);
 
-            // Bun
-            ctx.fillStyle = '#D2B48C'; // tan
+            const bunWidth = dawg.size.w * 0.5;
+            const bunHeight = dawg.size.h;
+            const sausageWidth = dawg.size.w * 0.35;
+            const sausageHeight = dawg.size.h * 0.95;
+            const bunOffset = dawg.size.w * 0.1;
+
+            // Back bun half
+            ctx.fillStyle = '#C19A6B'; // Darker tan for depth
             ctx.beginPath();
-            ctx.ellipse(-dawg.size.w * 0.25, 0, dawg.size.w * 0.25, dawg.size.h / 2, 0, 0, Math.PI * 2);
-            ctx.fill();
-            ctx.beginPath();
-            ctx.ellipse(dawg.size.w * 0.25, 0, dawg.size.w * 0.25, dawg.size.h / 2, 0, 0, Math.PI * 2);
+            ctx.ellipse(-bunOffset, 0, bunWidth / 2, bunHeight / 2, 0, 0, Math.PI * 2);
             ctx.fill();
 
             // Sausage
             ctx.fillStyle = '#B22222'; // red
             ctx.beginPath();
-            ctx.ellipse(0, 0, dawg.size.w * 0.3, dawg.size.h / 2, 0, 0, Math.PI * 2);
+            ctx.ellipse(0, 0, sausageWidth / 2, sausageHeight / 2, 0, 0, Math.PI * 2);
+            ctx.fill();
+
+            // Front bun half
+            ctx.fillStyle = '#D2B48C'; // Lighter tan
+            ctx.beginPath();
+            ctx.ellipse(bunOffset, 0, bunWidth / 2, bunHeight / 2, 0, 0, Math.PI * 2);
             ctx.fill();
 
             // Fuse
