--- a/index.html
+++ b/index.html
@@ -211,13 +211,25 @@
     .hotdawg-icon {
       display: inline-block;
       width: 18px;
-      height: 18px;
-      background: radial-gradient(circle at center, red 60%, #b5651d 70%);
-      border-radius: 9px;
+      height: 10px;
+      background: linear-gradient(to bottom, #a52a2a, #e34234);
+      border-radius: 5px;
       margin-right: 6px;
-      vertical-align: middle;
-      box-shadow: inset 0 0 2px #fff, 0 0 4px red;
+      box-shadow: inset 0 0 1px #fff, 0 0 3px red;
+      position: relative;
     }
+    .hotdawg-icon::before,
+    .hotdawg-icon::after {
+      content: '';
+      position: absolute;
+      width: 3px;
+      height: 10px;
+      background: #deb887;
+      top: 0;
+      border-radius: 2px;
+    }
+    .hotdawg-icon::before { left: -4px; }
+    .hotdawg-icon::after  { right: -4px; }
 
     .pillar-line {
       display: block;
@@ -828,7 +840,7 @@
 
             // Scrolling Text Logic
             const isSmallScreen = this.canvas.width <= 480;
-            const fontSize = isSmallScreen ? 16 : 14;
+            const fontSize = isSmallScreen ? 16 : 18;
             ctx.font = `bold ${fontSize}px 'Courier New', monospace`;
             ctx.fillStyle = '#39ff14';
             ctx.shadowColor = '#39ff14';
