--- a/index.html
+++ b/index.html
@@ -210,26 +210,31 @@
 
     .hotdawg-icon {
       display: inline-block;
-      width: 18px;
-      height: 10px;
-      background: linear-gradient(to bottom, #a52a2a, #e34234);
-      border-radius: 5px;
-      margin-right: 6px;
-      box-shadow: inset 0 0 1px #fff, 0 0 3px red;
+      width: 12px;
+      height: 24px;
+      background-color: #c22;
+      border-radius: 6px;
       position: relative;
+      margin-right: 6px;
+      vertical-align: middle;
+      box-shadow: inset 0 0 1px #fff, 0 0 2px #922;
     }
     .hotdawg-icon::before,
     .hotdawg-icon::after {
       content: '';
       position: absolute;
-      width: 3px;
-      height: 10px;
+      width: 16px;
+      height: 6px;
       background: #deb887;
-      top: 0;
-      border-radius: 2px;
+      border-radius: 3px;
+      left: -2px;
     }
-    .hotdawg-icon::before { left: -4px; }
-    .hotdawg-icon::after  { right: -4px; }
+    .hotdawg-icon::before {
+      top: -4px;
+    }
+    .hotdawg-icon::after {
+      bottom: -4px;
+    }
 
     .pillar-line {
       display: block;
@@ -472,8 +477,8 @@
 <li>🌽 Corn cobs: Because the sky's not safe from snacks!</li>
 <li>🐦 Birds doing wild loop-de-loops</li>
 <li>🎈 Balloons rising from the streets</li>
+<li><span class="hotdawg-icon"></span> …and watch out for those pesky HOT Dawgs!</li>
 </ul>
-<li><span class="hotdawg-icon"></span> HOT Dawgs: Exploding sausages that chase you through the sky!</li>
 <li>💥 Hitting anything drains your battery.</li>
 <li><span class="menu-icon red-x"></span> If your battery hits zero, it’s game over.</li>
 </ul>
