--- a/index.html
+++ b/index.html
@@ -181,34 +181,6 @@
       line-height: 1;
     }
 
-    .hotdawg-icon {
-      display: inline-block;
-      width: 12px;
-      height: 24px;
-      background-color: #c22;
-      border-radius: 6px;
-      position: relative;
-      margin-right: 6px;
-      vertical-align: middle;
-      box-shadow: inset 0 0 1px #fff, 0 0 2px #922;
-    }
-    .hotdawg-icon::before,
-    .hotdawg-icon::after {
-      content: '';
-      position: absolute;
-      width: 16px;
-      height: 6px;
-      background: #deb887;
-      border-radius: 3px;
-      left: -2px;
-    }
-    .hotdawg-icon::before {
-      top: -4px;
-    }
-    .hotdawg-icon::after {
-      bottom: -4px;
-    }
-
     .pillar-line {
       display: block;
       width: 12px;
@@ -450,7 +422,7 @@
 <li>🌽 Corn cobs: Because the sky's not safe from snacks!</li>
 <li>🐦 Birds doing wild loop-de-loops</li>
 <li>🎈 Balloons rising from the streets</li>
-<li><span class="hotdawg-icon"></span> …and watch out for those pesky HOT Dawgs!</li>
+<li>🌭 …and watch out for those pesky HOT Dawgs!</li>
 </ul>
 <li>💥 Hitting anything drains your battery.</li>
 <li><span class="menu-icon red-x"></span> If your battery hits zero, it’s game over.</li>
