--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 <li>🌽 Corn cobs: Because the sky's not safe from snacks!</li>
 <li>🐦 Birds doing wild loop-de-loops</li>
 <li>🎈 Balloons rising from the streets</li>
-<li style="font-size: 28px; color: red;">🌭 TEST HOT DAWG ICON</li>
+<li style="font-size: 18px; color: inherit;">🌭 …watch out for those pesky HOT Dawgs!</li>
 </ul>
 <li>💥 Hitting anything drains your battery.</li>
 <li><span class="menu-icon red-x"></span> If your battery hits zero, it’s game over.</li>
