--- a/index.html
+++ b/index.html
@@ -1365,9 +1365,128 @@
         }
     }
 
-    function drawPedestriansAndProjectiles() { pedestrians.forEach(p => { ctx.fillStyle = p.color; ctx.fillRect(p.x, p.y, p.size.w, p.size.h); const timeSinceAction = frameCount - p.lastActionFrame; const hintDuration = 30; if (p.lastActionFrame > 0 && timeSinceAction < hintDuration) { const alpha = 1 - (timeSinceAction / hintDuration); ctx.globalAlpha = alpha * 0.8; ctx.font = "12px 'Courier New', Courier, monospace"; ctx.textAlign = 'center'; if (p.type === 'OldLady') { ctx.fillStyle = 'orange'; ctx.fillText("🍗", p.x + p.size.w / 2, p.y - 5); } else { ctx.fillStyle = '#ccc'; ctx.fillText("o", p.x + p.size.w / 2, p.y - 5); } ctx.globalAlpha = 1.0; ctx.textAlign = 'left'; } }); projectiles.forEach(p => { ctx.save(); ctx.translate(p.x + p.size.w / 2, p.y + p.size.h / 2); if (p.type === 'ChickenLeg') { ctx.rotate(p.rotation); const meatWidth = p.size.w; const meatHeight = p.size.h * 0.65; const boneWidth = p.size.w * 0.25; const boneHeight = p.size.h * 0.4; const boneY = meatHeight / 2; ctx.fillStyle = '#D2691E'; ctx.beginPath(); ctx.ellipse(0, -meatHeight/4, meatWidth / 2, meatHeight / 2, 0, 0, Math.PI * 2); ctx.fill(); ctx.fillStyle = '#eee'; ctx.fillRect(-boneWidth / 2, boneY - boneHeight / 2, boneWidth, boneHeight); ctx.beginPath(); ctx.arc(-boneWidth / 2, boneY + boneHeight / 2, boneWidth * 0.4, 0, Math.PI * 2); ctx.arc(boneWidth / 2, boneY + boneHeight / 2, boneWidth * 0.4, 0, Math.PI * 2); ctx.fill(); } else if (p.type === 'CornCob') { ctx.rotate(p.rotation); const cobWidth = p.size.w; const cobHeight = p.size.h; const stickWidth = cobWidth * 0.3; const stickHeight = cobHeight * 0.3; const stickY = cobHeight * 0.35; ctx.fillStyle = '#FFC107'; ctx.beginPath(); ctx.ellipse(0, 0, cobWidth / 2, cobHeight / 2, 0, 0, Math.PI * 2); ctx.fill(); ctx.strokeStyle = 'rgba(139, 69, 19, 0.5)'; ctx.lineWidth = Math.max(1, cobWidth * 0.05); for(let i = -cobWidth/2 + 3; i < cobWidth/2 - 3; i += cobWidth * 0.15) { ctx.beginPath(); ctx.moveTo(i, -cobHeight/2.5); ctx.lineTo(i + cobWidth*0.05, cobHeight/2.5); ctx.stroke(); ctx.beginPath(); ctx.moveTo(i+cobWidth*0.05, -cobHeight/2.5); ctx.lineTo(i, cobHeight/2.5); ctx.stroke(); } ctx.fillStyle = '#D2B48C'; ctx.fillRect(-stickWidth / 2, stickY, stickWidth, stickHeight); } else if (p.type === 'Balloon') { ctx.fillStyle = p.color; ctx.beginPath(); ctx.ellipse(0, 0, p.size.w / 2, p.size.h / 2, 0, 0, Math.PI * 2); ctx.fill(); ctx.strokeStyle = '#ccc'; ctx.lineWidth = 1; ctx.beginPath(); ctx.moveTo(0, p.size.h / 2); ctx.lineTo(0, p.size.h / 2 + 10); ctx.stroke(); } else { ctx.fillStyle = p.color; ctx.fillRect(-p.size.w / 2, -p.size.h / 2, p.size.w, p.size.h); } ctx.restore(); }); }
-    function spawnBonus() { const isChargingTrigger = Math.random() < CHARGING_TRIGGER_SPAWN_CHANCE && !isChargingSequence; bonuses.push({ type: isChargingTrigger ? 'ChargingTrigger' : 'Battery', x: gameCanvas.width + 100 + Math.random() * 200, y: isChargingTrigger ? playableHeight * 0.1 + Math.random() * playableHeight * 0.3 : Math.random() * (playableHeight * 0.8), size: isChargingTrigger ? 30 : 20, speed: currentScrollSpeed * BONUS_SPEED_MULTIPLIER }); }
-    function updateBonuses() { for (let i = bonuses.length - 1; i >= 0; i--) { const b = bonuses[i]; b.x -= b.speed; if (b.x + b.size < 0) bonuses.splice(i, 1); } const batteryCount = bonuses.filter(b => b.type === 'Battery').length; const triggerCount = bonuses.filter(b => b.type === 'ChargingTrigger').length; if (batteryCount < 3 && Math.random() < 0.005) spawnBonus(); if (triggerCount === 0 && Math.random() < CHARGING_TRIGGER_SPAWN_CHANCE) spawnBonus(); }
+    function drawPedestriansAndProjectiles() {
+        pedestrians.forEach(p => {
+            ctx.fillStyle = p.color;
+            ctx.fillRect(p.x, p.y, p.size.w, p.size.h);
+            const timeSinceAction = frameCount - p.lastActionFrame;
+            const hintDuration = 30;
+            if (p.lastActionFrame > 0 && timeSinceAction < hintDuration) {
+                const alpha = 1 - (timeSinceAction / hintDuration);
+                ctx.globalAlpha = alpha * 0.8;
+                ctx.font = "12px 'Courier New', Courier, monospace";
+                ctx.textAlign = 'center';
+                if (p.type === 'OldLady') {
+                    ctx.fillStyle = 'orange';
+                    ctx.fillText("🍗", p.x + p.size.w / 2, p.y - 5);
+                } else {
+                    ctx.fillStyle = '#ccc';
+                    ctx.fillText("o", p.x + p.size.w / 2, p.y - 5);
+                }
+                ctx.globalAlpha = 1.0;
+                ctx.textAlign = 'left';
+            }
+        });
+
+        projectiles.forEach(p => {
+            ctx.save();
+            ctx.translate(p.x + p.size.w / 2, p.y + p.size.h / 2);
+            if (p.type === 'ChickenLeg') {
+                ctx.rotate(p.rotation);
+                const meatWidth = p.size.w;
+                const meatHeight = p.size.h * 0.65;
+                const boneWidth = p.size.w * 0.25;
+                const boneHeight = p.size.h * 0.4;
+                const boneY = meatHeight / 2;
+                ctx.fillStyle = '#D2691E';
+                ctx.beginPath();
+                ctx.ellipse(0, -meatHeight/4, meatWidth / 2, meatHeight / 2, 0, 0, Math.PI * 2);
+                ctx.fill();
+                ctx.fillStyle = '#eee';
+                ctx.fillRect(-boneWidth / 2, boneY - boneHeight / 2, boneWidth, boneHeight);
+                ctx.beginPath();
+                ctx.arc(-boneWidth / 2, boneY + boneHeight / 2, boneWidth * 0.4, 0, Math.PI * 2);
+                ctx.arc(boneWidth / 2, boneY + boneHeight / 2, boneWidth * 0.4, 0, Math.PI * 2);
+                ctx.fill();
+            } else if (p.type === 'CornCob') {
+                ctx.rotate(p.rotation);
+                const cobWidth = p.size.w;
+                const cobHeight = p.size.h;
+                const stickWidth = cobWidth * 0.3;
+                const stickHeight = cobHeight * 0.3;
+                const stickY = cobHeight * 0.35;
+                ctx.fillStyle = '#FFC107';
+                ctx.beginPath();
+                ctx.ellipse(0, 0, cobWidth / 2, cobHeight / 2, 0, 0, Math.PI * 2);
+                ctx.fill();
+                ctx.strokeStyle = 'rgba(139, 69, 19, 0.5)';
+                ctx.lineWidth = Math.max(1, cobWidth * 0.05);
+                for(let i = -cobWidth/2 + 3; i < cobWidth/2 - 3; i += cobWidth * 0.15) {
+                    ctx.beginPath();
+                    ctx.moveTo(i, -cobHeight/2.5);
+                    ctx.lineTo(i + cobWidth*0.05, cobHeight/2.5);
+                    ctx.stroke();
+                    ctx.beginPath();
+                    ctx.moveTo(i+cobWidth*0.05, -cobHeight/2.5);
+                    ctx.lineTo(i, cobHeight/2.5);
+                    ctx.stroke();
+                }
+                ctx.fillStyle = '#D2B48C';
+                ctx.fillRect(-stickWidth / 2, stickY, stickWidth, stickHeight);
+            } else if (p.type === 'Balloon') {
+                ctx.fillStyle = p.color;
+                ctx.beginPath();
+                ctx.ellipse(0, 0, p.size.w / 2, p.size.h / 2, 0, 0, Math.PI * 2);
+                ctx.fill();
+                ctx.strokeStyle = '#ccc';
+                ctx.lineWidth = 1;
+                ctx.beginPath();
+                ctx.moveTo(0, p.size.h / 2);
+                ctx.lineTo(0, p.size.h / 2 + 10);
+                ctx.stroke();
+            } else {
+                ctx.fillStyle = p.color;
+                ctx.fillRect(-p.size.w / 2, -p.size.h / 2, p.size.w, p.size.h);
+            }
+            ctx.restore();
+        });
+    }
+
+    function spawnBonus() {
+        const isChargingTrigger = Math.random() < CHARGING_TRIGGER_SPAWN_CHANCE && !isChargingSequence;
+        bonuses.push({
+            type: isChargingTrigger ? 'ChargingTrigger' : 'Battery',
+            x: gameCanvas.width + 100 + Math.random() * 200,
+            y: isChargingTrigger ? playableHeight * 0.1 + Math.random() * playableHeight * 0.3 : Math.random() * (playableHeight * 0.8),
+            size: isChargingTrigger ? 30 : 20,
+            speed: currentScrollSpeed * BONUS_SPEED_MULTIPLIER
+        });
+    }
+
+    function updateBonuses() {
+        // Force ChargingTrigger to appear immediately at game start
+        if (frameCount === 1) {
+            bonuses.push({
+                type: 'ChargingTrigger',
+                x: gameCanvas.width + 100,
+                y: playableHeight * 0.3,
+                size: 30,
+                speed: currentScrollSpeed * BONUS_SPEED_MULTIPLIER
+            });
+        }
+
+        for (let i = bonuses.length - 1; i >= 0; i--) {
+            const b = bonuses[i];
+            b.x -= b.speed;
+            if (b.x + b.size < 0) bonuses.splice(i, 1);
+        }
+
+        const batteryCount = bonuses.filter(b => b.type === 'Battery').length;
+        const triggerCount = bonuses.filter(b => b.type === 'ChargingTrigger').length;
+
+        if (batteryCount < 3 && Math.random() < 0.005) spawnBonus();
+        if (triggerCount === 0 && Math.random() < CHARGING_TRIGGER_SPAWN_CHANCE) spawnBonus();
+    }
     function drawBonuses() { bonuses.forEach(b => { if (b.type === 'Battery') { ctx.fillStyle = '#4CAF50'; ctx.fillRect(b.x, b.y, b.size, b.size); ctx.fillStyle = 'white'; ctx.fillRect(b.x + b.size * 0.4, b.y + b.size * 0.2, b.size * 0.2, b.size * 0.6); ctx.fillRect(b.x + b.size * 0.2, b.y + b.size * 0.4, b.size * 0.6, b.size * 0.2); } else if (b.type === 'ChargingTrigger') { ctx.fillStyle = '#0ff'; ctx.beginPath(); ctx.arc(b.x + b.size / 2, b.y + b.size / 2, b.size / 2, 0, Math.PI * 2); ctx.fill(); ctx.fillStyle = '#ff0'; ctx.beginPath(); ctx.moveTo(b.x + b.size * 0.6, b.y + b.size * 0.2); ctx.lineTo(b.x + b.size * 0.4, b.y + b.size * 0.5); ctx.lineTo(b.x + b.size * 0.55, b.y + b.size * 0.5); ctx.lineTo(b.x + b.size * 0.35, b.y + b.size * 0.8); ctx.lineTo(b.x + b.size * 0.6, b.y + b.size * 0.45); ctx.lineTo(b.x + b.size * 0.45, b.y + b.size * 0.45); ctx.closePath(); ctx.fill(); } }); }
     function spawnBird() { const currentBirdSpawnChance = BASE_BIRD_SPAWN_CHANCE * difficultyMultiplier; if (birds.length < (4 + Math.floor(difficultyMultiplier * 6)) && Math.random() < currentBirdSpawnChance) { const isLarge = Math.random() < 0.3; const size = isLarge ? 25 + Math.random() * 10 : 12 + Math.random() * 8; const baseY = playableHeight * (isLarge ? 0.3 : 0.15) + Math.random() * playableHeight * (isLarge ? 0.4 : 0.7); let baseSpeed = currentScrollSpeed * BIRD_SPEED_MULTIPLIER * 1.1; let ampMultiplier = 1.2; let freqMultiplier = 1.2; if (score > 3000) { ampMultiplier = 1.5 + (difficultyMultiplier - 1.15) * 1.2; freqMultiplier = 1.5 + (difficultyMultiplier - 1.15) * 1.0; } birds.push({ x: gameCanvas.width + 50 + Math.random() * 100, y: baseY, baseY: baseY, size: size, type: isLarge ? 'large' : 'small', speed: baseSpeed * (isLarge ? (0.8 + Math.random() * 0.1) : (1.0 + Math.random() * 0.2)), color: `hsl(30, ${15+Math.random()*10}%, ${isLarge ? 40 : 60 + Math.random() * 20}%)`, wingPhase: Math.random() * Math.PI * 2, wingSpeed: (isLarge ? 0.15 : 0.25) + Math.random() * 0.08, wanderAmplitudeY: (25 + Math.random() * 50) * (isLarge ? 1.3 : 1.0) * ampMultiplier, wanderFrequencyY: (0.025 + Math.random() * 0.035) * (isLarge ? 0.8 : 1.0) * freqMultiplier, wanderPhaseOffsetY: Math.random() * Math.PI * 2, wanderAmplitudeX: (40 + Math.random() * 70) * (isLarge ? 0.8 : 1.0) * ampMultiplier, wanderFrequencyX: (0.02 + Math.random() * 0.025) * (isLarge ? 0.9 : 1.0) * freqMultiplier, wanderPhaseOffsetX: Math.random() * Math.PI * 2, baseXOffset: 0 }); } }
     function updateBirds() { const maxBirds = 4 + Math.floor(difficultyMultiplier * 6); for (let i = birds.length - 1; i >= 0; i--) { const bird = birds[i]; const timeFactorY = frameCount * bird.wanderFrequencyY + bird.wanderPhaseOffsetY; const timeFactorX = frameCount * bird.wanderFrequencyX + bird.wanderPhaseOffsetX; const offsetY = Math.sin(timeFactorY) * bird.wanderAmplitudeY; const offsetX = Math.cos(timeFactorX) * bird.wanderAmplitudeX; bird.baseXOffset -= bird.speed; bird.x = (gameCanvas.width + bird.baseXOffset) + offsetX; bird.y = bird.baseY + offsetY; bird.wingPhase += bird.wingSpeed; bird.y = Math.max(0, Math.min(bird.y, playableHeight - bird.size)); if (bird.x + bird.size < -150) { birds.splice(i, 1); }} spawnBird(); }
